Made changes to role list

--- a/clocktower.html
+++ b/clocktower.html
@@ -14,6 +14,7 @@
                 <li><a href="#townsfolk">Townsfolk</a></li>
                 <li><a href="#outsiders">Outsiders</a></li>
                 <li><a href="#minions">Minions</a></li>
+                <li><a href="#imp">Imps</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +35,7 @@
             </article>
             <article id="chef">
                 <h3>Chef</h3>
-                <p>Acts normally.</p>
+                <p>You find out how many pairs of outsiders/minions/imps there are</p>
             </article>
             <article id="the-host">
                 <h3>The Host</h3>
@@ -48,29 +49,29 @@
                 <h3>Undercrust</h3>
                 <p>When someone is executed, you find out all of their opinions.</p>
             </article>
-            <article id="monk">
-                <h3>Monk</h3>
-                <p></p> <!-- No description provided, you might want to add one here -->
+            <article id="bill-splitter">
+                <h3>Bill Splitter</h3>
+                <p>Each night*, choose a player (not yourself): If they are attacked by the demon, they learn one opinion of the attacker.</p> 
             </article>
             <article id="pigeon">
                 <h3>Pigeon</h3>
                 <p>If you die at night, choose one person, you learn all of their opinions.</p>
             </article>
-            <article id="virgin">
-                <h3>Virgin</h3>
-                <p></p> <!-- No description provided, you might want to add one here -->
+            <article id="picky-eater">
+                <h3>The Picky Eater</h3>
+                <p>Choose a question to align to on night 1. If you are nominated by someone with +- 1 as their opinion on that question, they die.</p> 
             </article>
             <article id="hater">
                 <h3>Hater</h3>
                 <p>Once per game, you can point at someone and if you know their opinion on one question, they are instantly executed.</p>
             </article>
-            <article id="soldier">
-                <h3>Soldier</h3>
-                <p></p> <!-- No description provided, you might want to add one here -->
+            <article id="leftover-thief">
+                <h3>Leftover Thief</h3>
+                <p>You are safe from the Demon. If you are attacked at night, you learn one opinion of the attacker.</p>
             </article>
             <article id="the-franco-manco">
                 <h3>The Franco Manco</h3>
-                <p>Once per day, you can gossip and guess everyone's opinion. If every opinion registers correct, your team wins.</p>
+                <p>Once per day, you can gossip and guess everyone's true opinion. If every opinion registers correct, your team wins.</p>
             </article>
         </section>
         <section id="outsiders">
@@ -110,12 +111,13 @@
                 <h3>Baron</h3>
                 <p>Acts normally.</p>
             </article>
+        </section>
+        <section id="imp">
             <article id="imp">
                 <h3>Imp</h3>
                 <p>Acts normally.</p>
             </article>
         </section>
-        
     </main>
 </body>
 </html>
