Change librarian text

--- a/clocktower.html
+++ b/clocktower.html
@@ -27,7 +27,7 @@
             </article>
             <article id="librarian">
                 <h3>Librarian</h3>
-                <p>You start knowing 1 of 2 people has opinions different to the masses (could be outsider or minion or imp).</p>
+                <p>You start knowing 1 of 2 people have opinions different to the masses.</p>
             </article>
             <article id="investigator">
                 <h3>Investigator</h3>
@@ -113,6 +113,7 @@
             </article>
         </section>
         <section id="imp">
+            <h2>Imp</h2>
             <article id="imp">
                 <h3>Imp</h3>
                 <p>Acts normally.</p>
