--- a/clocktower.html
+++ b/clocktower.html
@@ -71,7 +71,7 @@
             </article>
             <article id="the-franco-manco">
                 <h3>The Franco Manco</h3>
-                <p>Once per day, you can gossip and guess everyone's true opinion. If every opinion registers correct, your team wins.</p>
+                <p>Once per day, you can gossip and guess everyone's true opinion on one question of your choice. If every opinion is correct, your team wins.</p>
             </article>
         </section>
         <section id="outsiders">
@@ -109,7 +109,7 @@
             </article>
             <article id="baron">
                 <h3>Baron</h3>
-                <p>Acts normally.</p>
+                <p>There are two more outsiders in the game</p>
             </article>
         </section>
         <section id="imp">
