--- a/clocktower.html
+++ b/clocktower.html
@@ -22,100 +22,100 @@
         <section id="townsfolk">
             <h2>Townsfolk</h2>
             <article id="washerwoman">
-                <h3>Washerwoman</h3>
+                <h3>Washerwoman (Washerwoman Token)</h3>
                 <p>You start knowing 1 of 2 people has a particular good (similar to rest) opinion.</p>
             </article>
             <article id="librarian">
-                <h3>Librarian</h3>
+                <h3>Librarian (Librarian Token)</h3>
                 <p>You start knowing 1 of 2 people have opinions different to the masses.</p>
             </article>
             <article id="investigator">
-                <h3>Investigator</h3>
+                <h3>Investigator (Investigator Token)</h3>
                 <p>You start knowing 1 of 2 people has a particular evil opinion.</p>
             </article>
             <article id="chef">
-                <h3>Chef</h3>
+                <h3>Chef (Chef Token)</h3>
                 <p>You find out how many pairs of outsiders/minions/imps there are</p>
             </article>
             <article id="the-host">
-                <h3>The Host</h3>
+                <h3>The Host (Empath Token)</h3>
                 <p>At night, hold up a finger from 1 to 3, you find out the opinions of the people next to you on that question.</p>
             </article>
             <article id="fortune-teller">
-                <h3>Fortune Teller</h3>
+                <h3>Fortune Teller (Fortune Teller Token)</h3>
                 <p>Acts normally.</p>
             </article>
             <article id="undercrust">
-                <h3>Undercrust</h3>
+                <h3>Undercrust (Underwhatever Token)</h3>
                 <p>When someone is executed, you find out all of their opinions.</p>
             </article>
             <article id="bill-splitter">
-                <h3>Bill Splitter</h3>
+                <h3>Bill Splitter (Monk Token)</h3>
                 <p>Each night*, choose a player (not yourself): If they are attacked by the demon, they learn one opinion of the attacker.</p> 
             </article>
             <article id="pigeon">
-                <h3>Pigeon</h3>
+                <h3>Pigeon (Ravenkeeper Token)</h3>
                 <p>If you die at night, choose one person, you learn all of their opinions.</p>
             </article>
             <article id="picky-eater">
-                <h3>The Picky Eater</h3>
+                <h3>The Picky Eater (Virgin Token)</h3>
                 <p>Choose a question to align to on night 1. If you are nominated by someone with +- 1 as their opinion on that question, they die.</p> 
             </article>
             <article id="hater">
-                <h3>Hater</h3>
+                <h3>Hater (Slayer Token)</h3>
                 <p>Once per game, you can point at someone and if you know their opinion on one question, they are instantly executed.</p>
             </article>
             <article id="leftover-thief">
-                <h3>Leftover Thief</h3>
+                <h3>Leftover Thief (Soldier Token)</h3>
                 <p>You are safe from the Demon. If you are attacked at night, you learn one opinion of the attacker.</p>
             </article>
             <article id="the-franco-manco">
-                <h3>The Franco Manco</h3>
+                <h3>The Franco Manco (Mayor Token)</h3>
                 <p>Once per day, you can gossip and guess everyone's true opinion on one question of your choice. If every opinion is correct, your team wins.</p>
             </article>
         </section>
         <section id="outsiders">
             <h2>Outsiders</h2>
             <article id="deliveroo">
-                <h3>Deliveroo</h3>
+                <h3>Deliveroo (Butler Token)</h3>
                 <p>One of the townsfolk registers as having the same unusual opinions as you, you know who they are.</p>
             </article>
             <article id="drunk">
-                <h3>Drunk</h3>
+                <h3>Drunk (Drunk Token)</h3>
                 <p>In addition to the usual effect of your power not working, your opinions can also register as whatever the storyteller chooses.</p>
             </article>
             <article id="recluse">
-                <h3>Recluse</h3>
+                <h3>Recluse (Recluse Token)</h3>
                 <p>You might register as having evil opinions, even if dead.</p>
             </article>
             <article id="pizza-pilgrim">
-                <h3>The (Pizza) Pilgrim</h3>
+                <h3>The (Pizza) Pilgrim (Saint Token)</h3>
                 <p>If you die by execution, your team loses.</p>
             </article>
         </section>
         <section id="minions">
             <h2>Minions</h2>
             <article id="poisoner">
-                <h3>Poisoner</h3>
+                <h3>Poisoner (Poisoner Token)</h3>
                 <p>Acts normally.</p>
             </article>
             <article id="dominos">
-                <h3>Dominos</h3>
-                <p>See what everyone submitted to the opinion survey.</p>
+                <h3>Dominos (Spy Token)</h3>
+                <p>See what everyone submitted to the opinion survey. Your opinions may register as good.</p>
             </article>
             <article id="pizzanovus">
-                <h3>Pizzanovus</h3>
+                <h3>Pizzanovus (Cerenovus Token)</h3>
                 <p>At night, choose one person to make mad that they have an opinion Thumbs Up (= Love, or 5 on survey), Thumbs Down (=Hate, or 1 on Survey) on one of the questions (hold up a finger from 1 to 3).</p>
             </article>
             <article id="baron">
-                <h3>Baron</h3>
+                <h3>Baron (Baron Token)</h3>
                 <p>There are two more outsiders in the game</p>
             </article>
         </section>
         <section id="imp">
             <h2>Imp</h2>
             <article id="imp">
-                <h3>Imp</h3>
+                <h3>Imp (Imp Token)</h3>
                 <p>Acts normally.</p>
             </article>
         </section>
