--- a/clocktower.html
+++ b/clocktower.html
@@ -19,6 +19,15 @@
         </nav>
     </header>
     <main>
+        <section id="introduction">
+            <h2>Introduction</h2>
+            <p>This variation on Blood on the Clocktower has the gimmick of deciding roles by asking its players 3 questions, answered from 1 to 5, before starting the match. 
+                Depending on how your answers are similar / different to your fellow players decides whether you become a Townsfolk, Outsider or Minion/Demon.
+                The storyteller should aim to pick the Minions & Demon as a group of players with opinions dissimilar to majority but, ideally, similar to each other.
+                Outsiders should be people with an opinion dissimilar to the group, but not necessarily similar to each other. Townsfolk is everyone who wasn't classified
+                as strange in some way!
+            </p>
+        </section>
         <section id="townsfolk">
             <h2>Townsfolk</h2>
             <article id="washerwoman">
