Added Pizzatician, added definitions section, updated text

--- a/clocktower.html
+++ b/clocktower.html
@@ -28,6 +28,17 @@
                 as strange in some way!
             </p>
         </section>
+        <section id="definition">
+            <h2>Definitions</h2>
+            <p>
+                Question = Asked on the survey at the beginning of the game
+                Opinion = The value someone gave to one of the questions
+                Good Opinion = An opinion held by a townsfolk<br>
+                Evil Opinion = An opinion held by a minion or demon<br>
+                Someone is "unusual" = They are either an outsider, minion, demon or opinion has registered as like an outsider, minion or demon.
+
+            </p>
+        </section>
         <section id="townsfolk">
             <h2>Townsfolk</h2>
             <div class="category-container">
@@ -37,7 +48,7 @@
                 </article>
                 <article class="role-item" id="librarian">
                     <h3>Librarian (Librarian Token)</h3>
-                    <p>You start knowing 1 of 2 people have opinions different to the masses.</p>
+                    <p>You start knowing 1 of 2 people are unusual.</p>
                 </article>
                 <article class="role-item" id="investigator">
                     <h3>Investigator (Investigator Token)</h3>
@@ -45,19 +56,19 @@
                 </article>
                 <article class="role-item" id="chef">
                     <h3>Chef (Chef Token)</h3>
-                    <p>You find out how many pairs of outsiders/minions/imps there are</p>
+                    <p>You find out how many pairs of unusuals there are</p>
                 </article>
                 <article class="role-item" id="the-host">
                     <h3>The Host (Empath Token)</h3>
                     <p>At night, hold up a finger from 1 to 3, you find out the opinions of the people next to you on that question.</p>
                 </article>
                 <article class="role-item" id="fortune-teller">
-                    <h3>Fortune Teller (Fortune Teller Token)</h3>
-                    <p>Acts normally.</p>
+                    <h3>The Pizzatician (Fortune Teller Token)</h3>
+                    <p>You can come up to the storyteller in the day to find out the answer to adding, subtracting or equality of two people's opinions, you cannot ask about your own opinion.</p>
                 </article>
                 <article class="role-item" id="undercrust">
                     <h3>Undercrust (Underwhatever Token)</h3>
-                    <p>When someone is executed, you find out all of their opinions.</p>
+                    <p>When someone is executed, you find out all of their opinions and their corresponding questions.</p>
                 </article>
                 <article class="role-item" id="bill-splitter">
                     <h3>Bill Splitter (Monk Token)</h3>
@@ -65,7 +76,7 @@
                 </article>
                 <article class="role-item" id="pigeon">
                     <h3>Pigeon (Ravenkeeper Token)</h3>
-                    <p>If you die at night, choose one person, you learn all of their opinions.</p>
+                    <p>If you die at night, choose one person, you learn all of their opinions and their corresponding questions.</p>
                 </article>
                 <article class="role-item" id="picky-eater">
                     <h3>The Picky Eater (Virgin Token)</h3>
@@ -73,11 +84,11 @@
                 </article>
                 <article class="role-item" id="hater">
                     <h3>Hater (Slayer Token)</h3>
-                    <p>Once per game, you can point at someone and if you know their opinion on one question, they are instantly executed.</p>
+                    <p>Once per game, you can point at someone and if you know their opinion on one question, they are executed.</p>
                 </article>
                 <article class="role-item" id="leftover-thief">
                     <h3>Leftover Thief (Soldier Token)</h3>
-                    <p>You are safe from the Demon. If you are attacked at night, you learn one opinion of the attacker.</p>
+                    <p>You are safe from the Demon. If you are attacked at night, you learn one opinion and corresponding question of the attacker.</p>
                 </article>
                 <article class="role-item" id="the-franco-manco">
                     <h3>The Franco Manco (Mayor Token)</h3>
@@ -90,7 +101,7 @@
             <div class="category-container">
                 <article class="role-item" id="deliveroo">
                     <h3>Deliveroo (Butler Token)</h3>
-                    <p>One of the townsfolk registers as having the same unusual opinions as you, you know who they are.</p>
+                    <p>One of the townsfolk registers as having your opinions and is classified as an unusual, you know who they are.</p>
                 </article>
                 <article class="role-item" id="drunk">
                     <h3>Drunk (Drunk Token)</h3>
@@ -115,11 +126,11 @@
                 </article>
                 <article class="role-item" id="dominos">
                     <h3>Dominos (Spy Token)</h3>
-                    <p>See what everyone submitted to the opinion survey. Your opinions may register as good.</p>
+                    <p>See what everyone submitted to the opinion survey. Your opinions may register as good and you may register as not unusual.</p>
                 </article>
                 <article class="role-item" id="pizzanovus">
                     <h3>Pizzanovus (Cerenovus Token)</h3>
-                    <p>At night, choose one person to make mad that they have an opinion Thumbs Up (= Love, or 5 on survey), Thumbs Down (=Hate, or 1 on Survey) on one of the questions (hold up a finger from 1 to 3).</p>
+                    <p>At night, choose one person to make mad for the next day that they have an opinion Thumbs Up (= Love, or 5 on survey), Thumbs Down (=Hate, or 1 on Survey) on one of the questions (hold up a finger from 1 to 2).</p>
                 </article>
                 <article class="role-item" id="baron">
                     <h3>Baron (Baron Token)</h3>
@@ -132,7 +143,7 @@
             <div class="category-container">
                 <article class="role-item" id="imp">
                     <h3>Imp (Imp Token)</h3>
-                    <p>Acts normally.</p>
+                    <p>Acts normally. If there are two or more minions, the imp should be the player with the middle of the evil opinions.</p>
                 </article>
             </div>
         </section>
