--- a/clocktower.html
+++ b/clocktower.html
@@ -31,8 +31,8 @@
         <section id="definition">
             <h2>Definitions</h2>
             <p>
-                Question = Asked on the survey at the beginning of the game
-                Opinion = The value someone gave to one of the questions
+                Question = Asked on the survey at the beginning of the game<br>
+                Opinion = The value someone gave to one of the questions<br>
                 Good Opinion = An opinion held by a townsfolk<br>
                 Evil Opinion = An opinion held by a minion or demon<br>
                 Someone is "unusual" = They are either an outsider, minion, demon or opinion has registered as like an outsider, minion or demon.
