Fix Underwhatever Token

--- a/clocktower.html
+++ b/clocktower.html
@@ -36,7 +36,6 @@
                 Good Opinion = An opinion held by a townsfolk<br>
                 Evil Opinion = An opinion held by a minion or demon<br>
                 Someone is "unusual" = They are either an outsider, minion, demon or opinion has registered as like an outsider, minion or demon.
-
             </p>
         </section>
         <section id="townsfolk">
@@ -67,7 +66,7 @@
                     <p>You can come up to the storyteller in the day to find out the answer to adding, subtracting or equality of two people's opinions, you cannot ask about your own opinion.</p>
                 </article>
                 <article class="role-item" id="undercrust">
-                    <h3>Undercrust (Underwhatever Token)</h3>
+                    <h3>Undercrust (Undertaker Token)</h3>
                     <p>When someone is executed, you find out all of their opinions and their corresponding questions.</p>
                 </article>
                 <article class="role-item" id="bill-splitter">
