Remove the possibility of asking equality in pizzatician

--- a/clocktower.html
+++ b/clocktower.html
@@ -63,7 +63,7 @@
                 </article>
                 <article class="role-item" id="fortune-teller">
                     <h3>The Pizzatician (Fortune Teller Token)</h3>
-                    <p>You can come up to the storyteller in the day to find out the answer to adding, subtracting or equality of two people's opinions, you cannot ask about your own opinion.</p>
+                    <p>You can come up to the storyteller in the day to find out the answer to adding or subtracting of two people's opinions, you cannot ask about your own opinion.</p>
                 </article>
                 <article class="role-item" id="undercrust">
                     <h3>Undercrust (Undertaker Token)</h3>
