Removed (not yourself) text from Bill Splitter as it no longer protects you

--- a/clocktower.html
+++ b/clocktower.html
@@ -71,7 +71,7 @@
                 </article>
                 <article class="role-item" id="bill-splitter">
                     <h3>Bill Splitter (Monk Token)</h3>
-                    <p>Each night*, choose a player (not yourself): If they are attacked by the demon, they learn one opinion of the attacker.</p> 
+                    <p>Each night*, choose a player: If they are attacked by the demon, they learn one opinion of the attacker.</p> 
                 </article>
                 <article class="role-item" id="pigeon">
                     <h3>Pigeon (Ravenkeeper Token)</h3>
