--- a/clocktower.html
+++ b/clocktower.html
@@ -42,15 +42,15 @@
             <h2>Townsfolk</h2>
             <div class="category-container">
                 <article class="role-item" id="washerwoman">
-                    <h3>Washerwoman (Washerwoman Token)</h3>
+                    <h3>Dishwasher (Washerwoman Token)</h3>
                     <p>You start knowing 1 of 2 people has a particular good (similar to rest) opinion.</p>
                 </article>
                 <article class="role-item" id="librarian">
-                    <h3>Librarian (Librarian Token)</h3>
+                    <h3>Pineapple Seller (Librarian Token)</h3>
                     <p>You start knowing 1 of 2 people are unusual.</p>
                 </article>
                 <article class="role-item" id="investigator">
-                    <h3>Investigator (Investigator Token)</h3>
+                    <h3>Hygiene Inspector (Investigator Token)</h3>
                     <p>You start knowing 1 of 2 people has a particular evil opinion.</p>
                 </article>
                 <article class="role-item" id="chef">
@@ -63,7 +63,7 @@
                 </article>
                 <article class="role-item" id="fortune-teller">
                     <h3>The Pizzatician (Fortune Teller Token)</h3>
-                    <p>You can come up to the storyteller in the day to find out the answer to adding or subtracting of two people's opinions, you cannot ask about your own opinion.</p>
+                    <p>You can come up to the storyteller in the day to find out the answer to adding or subtracting of two people's opinions. There is a player that registers as unusual to you.</p>
                 </article>
                 <article class="role-item" id="undercrust">
                     <h3>Undercrust (Undertaker Token)</h3>
@@ -83,7 +83,7 @@
                 </article>
                 <article class="role-item" id="hater">
                     <h3>Hater (Slayer Token)</h3>
-                    <p>Once per game, you can point at someone and if you know their opinion on one question, they are executed.</p>
+                    <p>Once per game, you can point at someone and if they are unusual, they are executed.</p>
                 </article>
                 <article class="role-item" id="leftover-thief">
                     <h3>Leftover Thief (Soldier Token)</h3>
@@ -91,7 +91,7 @@
                 </article>
                 <article class="role-item" id="the-franco-manco">
                     <h3>The Franco Manco (Mayor Token)</h3>
-                    <p>Once per day, you can gossip and guess everyone's true opinion on one question of your choice. If every opinion is correct, your team wins.</p>
+                    <p>Once per day, you can gossip and guess whether everyone has a positive or negative opinion. If every guess is correct, your team wins.</p>
                 </article>
             </div>
         </section>
@@ -107,7 +107,7 @@
                     <p>In addition to the usual effect of your power not working, your opinions can also register as whatever the storyteller chooses.</p>
                 </article>
                 <article class="role-item" id="recluse">
-                    <h3>Recluse (Recluse Token)</h3>
+                    <h3>Late Orderer (Recluse Token)</h3>
                     <p>You might register as having evil opinions, even if dead.</p>
                 </article>
                 <article class="role-item" id="pizza-pilgrim">
@@ -129,11 +129,11 @@
                 </article>
                 <article class="role-item" id="pizzanovus">
                     <h3>Pizzanovus (Cerenovus Token)</h3>
-                    <p>At night, choose one person to make mad for the next day that they have an opinion Thumbs Up (= Love, or 5 on survey), Thumbs Down (=Hate, or 1 on Survey) on one of the questions (hold up a finger from 1 to 2).</p>
+                    <p>At night, choose one person to make mad for the next day that they have an opinion Thumbs Up (= Love, or 5 on survey), Thumbs Down (=Hate, or -5 on Survey) on one of the questions (hold up a finger from 1 to 2).</p>
                 </article>
                 <article class="role-item" id="baron">
-                    <h3>Baron (Baron Token)</h3>
-                    <p>There are two more outsiders in the game</p>
+                    <h3>Your friend's judgemental mum ordering you pizza (Baron Token)</h3>
+                    <p>Each night*, you may choose a player and name an opinion, if you are correct about their opinion, they die.</p>
                 </article>
             </div>
         </section>
