--- a/clocktower.html
+++ b/clocktower.html
@@ -36,6 +36,7 @@
                 Good Opinion = An opinion held by a townsfolk<br>
                 Evil Opinion = An opinion held by a minion or demon<br>
                 Someone is "unusual" = They are either an outsider, minion, demon or opinion has registered as like an outsider, minion or demon.
+				If there are two or more minions, the demon should be the player with the middle of the evil opinions.
             </p>
         </section>
         <section id="townsfolk">
@@ -91,7 +92,7 @@
                 </article>
                 <article class="role-item" id="the-franco-manco">
                     <h3>The Franco Manco (Mayor Token)</h3>
-                    <p>Once per day, you can gossip and guess whether everyone has a positive or negative opinion. If every guess is correct, your team wins.</p>
+                    <p>Once per game, you can gossip and guess whether everyone has a positive or negative true opinion. If every guess is correct, your team wins.</p>
                 </article>
             </div>
         </section>
@@ -100,7 +101,7 @@
             <div class="category-container">
                 <article class="role-item" id="deliveroo">
                     <h3>Deliveroo (Butler Token)</h3>
-                    <p>One of the townsfolk registers as having your opinions and is classified as an unusual, you know who they are.</p>
+                    <p>One of the townsfolk registers as having your opinions and is classified as an unusual.</p>
                 </article>
                 <article class="role-item" id="drunk">
                     <h3>Drunk (Drunk Token)</h3>
@@ -141,8 +142,12 @@
             <h2>Imp</h2>
             <div class="category-container">
                 <article class="role-item" id="imp">
-                    <h3>Imp (Imp Token)</h3>
-                    <p>Acts normally. If there are two or more minions, the imp should be the player with the middle of the evil opinions.</p>
+                    <h3>The Pizza Toss (Imp Token)</h3>
+                    <p>Acts normally. (star pass is now called pizza toss)</p>
+                </article>
+				<article class="role-item" id="po">
+                    <h3>The Dropped Pizza Box (Po Token)</h3>
+                    <p>Each night*, you may choose to kill someone. If you chose no one last night, choose a number and a question, all players with that opinion die.</p>
                 </article>
             </div>
         </section>
